--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,5 +1,7 @@
 /* ==========================================================================
    SINGLE PAGE/POST
+   - Wider default content on large screens (11/12)
+   - Optional `.wide` class to go full width (12/12)
    ========================================================================== */
 
 #main {
@@ -11,16 +13,18 @@
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
+  // Uses theme variable; override $x-large in a later partial to change site cap.
   @include breakpoint($x-large) {
     max-width: $x-large;
   }
 }
 
 .page {
+  // Wider default text column on large screens (balanced gutters)
   @include breakpoint($large) {
-    @include span(10 of 12 last);
+    @include span(11 of 12);
     @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    @include suffix(0.5 of 12);
   }
 
   .page__inner-wrap {
@@ -31,6 +35,19 @@
     .page__share {
       @include full();
     }
+  }
+}
+
+/* Full-width modifier:
+   Use in page front matter:
+   layout: single
+   classes: [wide]
+*/
+.wide .page {
+  @include breakpoint($large) {
+    @include span(12 of 12);
+    @include prefix(0);
+    @include suffix(0);
   }
 }
 
@@ -49,7 +66,6 @@
 }
 
 .page__content {
-
   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
@@ -63,7 +79,7 @@
   p {
     margin: 0 0 $indent-var;
 
-    /* sibling indentation*/
+    /* sibling indentation */
     @if $paragraph-indent == true {
       & + p {
         text-indent: $indent-var;
@@ -125,9 +141,7 @@
     animation: intro 0.3s both;
     animation-delay: 0.25s;
 
-    a {
-      color: #fff;
-    }
+    a { color: #fff; }
 
     .wrapper {
       padding-left: 1em;
@@ -146,9 +160,7 @@
       text-shadow: 1px 1px 4px rgba(#000, 0.5);
     }
 
-    .page__lead {
-      max-width: $medium;
-    }
+    .page__lead { max-width: $medium; }
 
     .page__title {
       font-size: $type-size-2;
@@ -191,7 +203,7 @@
   }
 }
 
-/*
+/* ==========================================================================
    Social sharing
    ========================================================================== */
 
@@ -220,8 +232,7 @@
   text-transform: uppercase;
 }
 
-
-/*
+/* ==========================================================================
    Page meta
    ========================================================================== */
 
@@ -231,13 +242,8 @@
   font-family: $sans-serif;
   font-size: $type-size-6;
 
-  p {
-    margin: 0;
-  }
-
-  a {
-    color: inherit;
-  }
+  p { margin: 0; }
+  a { color: inherit; }
 }
 
 .page__meta-title {
@@ -246,19 +252,13 @@
   text-transform: uppercase;
 }
 
-
-/*
+/* ==========================================================================
    Page taxonomy
    ========================================================================== */
 
 .page__taxonomy {
-  .sep {
-    display: none;
-  }
-
-  strong {
-    margin-right: 10px;
-  }
+  .sep { display: none; }
+  strong { margin-right: 10px; }
 }
 
 .page__taxonomy-item {
@@ -276,14 +276,11 @@
   }
 }
 
-
-/*
+/* ==========================================================================
    Comments
    ========================================================================== */
 
-.page__comments {
-  @include full();
-}
+.page__comments { @include full(); }
 
 .page__comments-title {
   margin-top: 2rem;
@@ -314,7 +311,7 @@
 }
 
 .comment {
-  @include clearfix();
+  @include clearfix;
   margin: 1em 0;
 
   &:not(:last-child) {
@@ -358,22 +355,17 @@
 .comment__author {
   margin: 0;
 
-  a {
-    text-decoration: none;
-  }
+  a { text-decoration: none; }
 }
 
 .comment__date {
   @extend .page__meta;
   margin: 0;
 
-  a {
-    text-decoration: none;
-  }
+  a { text-decoration: none; }
 }
 
-
-/*
+/* ==========================================================================
    Related
    ========================================================================== */
 
@@ -381,7 +373,7 @@
   margin-top: 2em;
   padding-top: 1em;
   border-top: 1px solid $border-color;
-  @include clearfix();
+  @include clearfix;
   float: left;
 
   @include breakpoint($large) {
@@ -399,3 +391,13 @@
   font-size: $type-size-6;
   text-transform: uppercase;
 }
+
+/* ==========================================================================
+   Optional readability cap for ultra-wide screens
+   (uncomment if you find lines too long)
+   ========================================================================== */
+/*
+@media (min-width: 1600px) {
+  .page__content { max-width: 85ch; }
+}
+*/
